src/style.css
/* ... */
.about-page {
  margin: var(--spacing-0) auto;
  max-width: var(--maxWidth-wrapper);
  padding: var(--spacing-2) var(--spacing-5);
  word-wrap: break-word;
}

.blog-post {
  margin: var(--spacing-0) auto;
  max-width: var(--maxWidth-wrapper);
  padding: var(--spacing-16) var(--spacing-5);
  word-wrap: break-word;
}

.blog-post-header-image {
  width: 100%;
  height: 100%;
}

.blog-post > header {
  text-align: center;
}

.blog-post > header h1 {
  margin: var(--spacing-0) var(--spacing-0) var(--spacing-4) var(--spacing-0);
  text-align: left;
}

.blog-post > header time,
.blog-post-tag-list {
  margin-top: var(--spacing-2);
  color: #999;
}

.blog-post nav {
  margin: 3rem 0;
}

.blog-post nav header {
  font-weight: var(--fontWeight-bold);
}

.blog-post nav hr {
  height: 2px;
  background-color: var(--color-brand);
  margin: 1rem 0;
}

.blog-post nav a {
  display: block;
  color: var(--color-brand);
  text-decoration: none;
  transition: color .2s;
}

.blog-post nav a:hover {
  color: var(--color-brand-transparent);
}

.blog-post nav section {
  margin: 1rem 0;
  text-align: initial;
}

.blog-post nav section ul {
  list-style: none;
  margin-left: 0;
  padding: 0;
}

.blog-post nav section > ul {
  margin: 2rem 0;
}

.blog-post nav section ul li {
  position: relative;
  margin-bottom: var(--spacing-4);
}

.blog-post nav section > ul > li {
  padding-left: var(--spacing-6);
  font-weight: var(--fontWeight-bold);
}

.blog-post nav section > ul > li::before {
  content: "";
  position: absolute;
  left: 0px;
  top: 0.37rem;
  width: 0.7rem;
  height: 0.7rem;
  background-color: var(--color-brand);
  border-radius: 50%;
}

.blog-post nav section > ul > li > ul {
  margin-top: var(--spacing-4);
}

.blog-post nav section > ul > li > ul > li {
  font-weight: var(--fontWeight-normal);
}

.blog-post nav section > ul > li > ul > li::before {
  content: "";
  position: absolute;
  left: -1.36rem;
  top: 0.6rem;
  width: 0.4rem;
  height: 0.4rem;
  background-color: var(--color-brand-transparent);
  border-radius: 50%;
}

.share-footer {
  display: flex;
  justify-content: center;
  column-gap: var(--spacing-5);
}

.share-footer rect {
  fill: #fff;
}

.share-footer path {
  fill: var(--color-brand);
}

.share-footer button {
  transition: opacity .2s;
}

.share-footer button:hover {
  opacity: .5;
}

.gatsby-highlight {
  margin-bottom: var(--spacing-8);
}

.not-found-page {
  text-align: center;
  margin: var(--spacing-0) auto;
  max-width: var(--maxWidth-wrapper);
  padding: var(--spacing-2) var(--spacing-5);
  word-wrap: break-word;
}

.not-found-page section {
  margin-top: var(--spacing-4);
}

/* Media queries */

@media (max-width: 100em) {
  .post-list {
    grid-template-columns: 1fr 1fr 1fr;
  }
}

@media (max-width: 64em) {
  .post-list {
    grid-template-columns: 1fr 1fr;
    column-gap: 12vw;
  }

  .global-main-top {
    padding: 7vw 10vw;
  }
}

@media (max-width: 46em) {
  .global-nav-wrapper {
    pointer-events: initial;
    background-color: #fff;
  }
}

@media (max-width: 37.5em) {
  blockquote {
    padding: var(--spacing-0) var(--spacing-0) var(--spacing-0) var(--spacing-4);
  }

  .header-brand {
    width: 14rem;
  }

  .global-header-common {
    padding: 6rem 0 2rem;
  }

  .global-main-top {
    padding: 15vw 15vw;
  }

  .post-list {
    grid-template-columns: 1fr;
    row-gap: 10vw;
  }
}

.is-hidden {
  visibility: hidden;
  opacity: 0;
  transition: opacity .5s, visibility 0s .5s !important;
}

